# mimiron

./: .gitignore  CHANGELOG.md  LICENSE  README.ko.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.mimiron/_global/: mechanical.toml  thresholds.yaml
agents/: mimiron-reviewer.md  mimiron-tester.md  mimiron-worker.md
benchmarks/: _CURATION_GUIDE.md  _cutoff.yaml
benchmarks/B01-welcome-message-fix/: benchmark.yaml  curation.md  expected.diff  issue.md
benchmarks/B02-counselor-handover/: benchmark.yaml  curation.md  expected.diff  issue.md
benchmarks/B03-product-resolver-refactor/: benchmark.yaml  curation.md  expected.diff  issue.md
benchmarks/B04-hallucination-guard/: benchmark.yaml  curation.md  expected.diff  issue.md
benchmarks/B05-businessday-deadline/: benchmark.yaml  curation.md  expected.diff  issue.md
commands/: mimiron-pause.md  mimiron-resume.md  mimiron-status.md  mimiron-swebench.md  mimiron-unstuck.md  mimiron.md
docs/: HANDOVER.md  post-compact-prompt.md  ralph-loop-entry.md  ralph-v0.2.0-wrap.md  ralph-v0.3.0-wrap.md
dogfood/: 002-bench-list-json-defects.md  003-status-json-flag-verify.md  004-plugin-self-contained.md  005-real-judge-bench.md  006-v030-wrap.md  007-swebench-lite-poc.md
dogfood/001-b01-manual-run/: judge-stub.json  notes.md
evals/: README.md  go.toml  node-npm.toml  python-pip.toml
hooks/: hooks.json  post-toolwrite.py  session-start.py  stop-hook.py
scripts/: _launcher.py  mimiron  mimiron-bench
skills/bench-judge/: SKILL.md
skills/clarify/: SKILL.md
tests/: conftest.py
(+97 files in other folders)
